# ai-playground

./: .gitignore  README.md
transcription-outpost/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CI-CD-README.md  Makefile  PRE-COMMIT-TESTING.md  README.md  debug_test.py  kill-processes-log.txt  package-lock.json  pyproject.toml  pytest.ini  run-tests-hook.bat  run_tests.py  setup-ci.py  simple_test.py  test_llama.py
transcription-outpost/.github/workflows/: ci.yml
transcription-outpost/app/: main.py
transcription-outpost/app/core/: audio.py  config.py  logger.py  models.py
transcription-outpost/app/services/llm/: README.md  base.py  chain.py  factory.py  llama.py
transcription-outpost/app/services/speech/: README.md  __init__.py  base.py  factory.py  paddle.py  router.py  whisper.py
transcription-outpost/scripts/: generate_test_audio.py  run_server.py  test_transcription.py
transcription-outpost/scripts-admin/: fix-permissions.ps1  fix-web-app.ps1  kill-all-processes.bat  kill-all-processes.ps1  nuclear-fix.ps1  quick-setup.bat  setup-https.ps1  setup-mobile-cert.ps1  setup-network.ps1  test-connection.ps1
transcription-outpost/tests/: conftest.py  test_api_integration.py
transcription-outpost/tests/services/llm/: test_chains.py  test_llm_factory.py
transcription-outpost/tests/services/speech/: test_integration.py  test_paddle.py  test_whisper.py  (+2 more)
transcription-outpost/web/: .eslintrc.json  .gitignore  next.config.ts  package-lock.json  package.json  server-http.js  server.js
transcription-outpost/web/src/: App.css  App.tsx  index.css
(+14 files in other folders)
