[tool.poetry]
name = "transcription-outpost"
version = "0.1.0"
description = "Audio-to-text streaming service using LangChain and Whisper.AI"
authors = ["Operation Command <command@transcription-outpost.mil>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
langchain = "^0.2.0"
llama-cpp-python = "^0.2.56"
paddlepaddle = "^2.5.2"
paddlespeech = "^1.5.1"
numpy = "^1.26.0"
soundfile = "^0.12.1"
librosa = "^0.10.1"
torch = "^2.2.0"
tqdm = "^4.66.0"
loguru = "^0.7.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 